Generative modifiers in editmode display vertex group weights incorrectly (or assert) #57371

Closed
opened 2018-10-24 13:28:44 +02:00 by Philipp Oeser · 14 comments
Member

System Information
Fedora 28, 970m, 396.45 drivers

Blender Version
Broken: 547d31c8da
Worked: 2.79

Short description of error
Any generative modifier (that has a show_in_editmode setting) will show the weights on the generated geometry incorrectly.

  • In release builds this will either draw only parts of the mesh (with garbled weights)
  • or prevent the generated faces to be drawn at all
  • spotted while investigating #57283
  • in Debug builds this asserts:
1  raise                                                                                   0x7ffff1c93eab 
2  abort                                                                                   0x7ffff1c7e5b9 
3  __assert_fail_base.cold.0                                                               0x7ffff1c7e491 
4  __assert_fail                                                                           0x7ffff1c8c612 
5  GPU_batch_vertbuf_add_ex                                    gpu_batch.c            193  0x25ce62b      
6  DRW_mesh_batch_cache_get_triangles_with_normals_and_weights draw_cache_impl_mesh.c 4734 0x2619682      
7  DRW_cache_mesh_surface_weights_get                          draw_cache.c           3093 0x268be70      
8  EDIT_MESH_cache_populate                                    edit_mesh_mode.c       636  0x2636cf1      
9  drw_engines_cache_populate                                  draw_manager.c         979  0x2624a27      
10 DRW_draw_render_loop_ex                                     draw_manager.c         1469 0x2625c02      
11 DRW_draw_view                                               draw_manager.c         1406 0x26258c5     
12 view3d_draw_view                                            view3d_draw.c          1259 0x1b41789

Exact steps for others to reproduce the error

WeightsInEditmodeGenerativeModifier.blend

  • open blend
  • select any of the objects (all have a generative modifier on them with show_in_editmode turned on)
  • go into editmode
  • enable Overlays > Vertex Group Weights
**System Information** Fedora 28, 970m, 396.45 drivers **Blender Version** Broken: 547d31c8da Worked: 2.79 **Short description of error** Any generative modifier (that has a `show_in_editmode` setting) will show the weights on the generated geometry incorrectly. - In release builds this will either draw only parts of the mesh (with garbled weights) - or prevent the generated faces to be drawn at all - spotted while investigating #57283 - in Debug builds this asserts: ``` 1 raise 0x7ffff1c93eab 2 abort 0x7ffff1c7e5b9 3 __assert_fail_base.cold.0 0x7ffff1c7e491 4 __assert_fail 0x7ffff1c8c612 5 GPU_batch_vertbuf_add_ex gpu_batch.c 193 0x25ce62b 6 DRW_mesh_batch_cache_get_triangles_with_normals_and_weights draw_cache_impl_mesh.c 4734 0x2619682 7 DRW_cache_mesh_surface_weights_get draw_cache.c 3093 0x268be70 8 EDIT_MESH_cache_populate edit_mesh_mode.c 636 0x2636cf1 9 drw_engines_cache_populate draw_manager.c 979 0x2624a27 10 DRW_draw_render_loop_ex draw_manager.c 1469 0x2625c02 11 DRW_draw_view draw_manager.c 1406 0x26258c5 12 view3d_draw_view view3d_draw.c 1259 0x1b41789 ``` **Exact steps for others to reproduce the error** [WeightsInEditmodeGenerativeModifier.blend](https://archive.blender.org/developer/F5211837/WeightsInEditmodeGenerativeModifier.blend) - open blend - select any of the objects (all have a generative modifier on them with `show_in_editmode` turned on) - go into editmode - enable `Overlays` > `Vertex Group Weights`
Author
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk

#60096 was marked as duplicate of this issue

#60096 was marked as duplicate of this issue

#57283 was marked as duplicate of this issue

#57283 was marked as duplicate of this issue
Philipp Oeser self-assigned this 2018-10-24 14:02:50 +02:00
Author
Member

Added subscriber: @angavrilov

Added subscriber: @angavrilov
Author
Member

Will look into it myself for a bit already have something working using the hack from [here ]
If that doesnt succeed, I'll pass on to @angavrilov...

Will look into it myself for a bit [already have something working using the hack from [here ]](https://developer.blender.org/diffusion/B/browse/blender2.8/source/blender/draw/intern/draw_cache_impl_mesh.c;547d31c8da1fcb938e91887909c5e2f3b3d180d5$5214) If that doesnt succeed, I'll pass on to @angavrilov...

This sounds like the same problem that I noticed weeks ago. Probably the fix wasn't completed/committed:

[Wednesday, October 10, 2018] [1:12:57 PM MSK] angavrilov: https://hastebin.com/ubarexijid.php
[Wednesday, October 10, 2018] [1:13:19 PM MSK] angavrilov: but this needs to be done better

This sounds like the same problem that I noticed weeks ago. Probably the fix wasn't completed/committed: [Wednesday, October 10, 2018] [1:12:57 PM MSK] <hypersomniac> angavrilov: https://hastebin.com/ubarexijid.php [Wednesday, October 10, 2018] [1:13:19 PM MSK] <hypersomniac> angavrilov: but this needs to be done better
Philipp Oeser removed their assignment 2018-10-24 14:42:50 +02:00
Clément Foucault was assigned by Philipp Oeser 2018-10-24 14:42:50 +02:00
Author
Member

Yep, sounds like exactly what I figured in D3827, sorry for the duplicated efforts...
Not sure why this was postponed [as the hack is used elsewhere as well - see above]

Will let fclem decide whats to be done here...

Yep, sounds like exactly what I figured in [D3827](https://archive.blender.org/developer/D3827), sorry for the duplicated efforts... Not sure why this was postponed [as the hack is used elsewhere as well - see above] Will let fclem decide whats to be done here...
Author
Member

Added subscribers: @MarianKosa, @ideasman42

Added subscribers: @MarianKosa, @ideasman42
Author
Member

Added subscribers: @AFWS, @HardRooster

Added subscribers: @AFWS, @HardRooster

I also noticed today that the vertex weights wouldn't show up with a subsurf modifier visible in edit mode as well. If you untick the visible box, the weights appear, just like with the mirror modifier.

I also noticed today that the vertex weights wouldn't show up with a subsurf modifier visible in edit mode as well. If you untick the visible box, the weights appear, just like with the mirror modifier.

This issue was referenced by 6dbfd7f6d6

This issue was referenced by 6dbfd7f6d6bc9bea9556861eba682a3126b5ed40

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 00d2237d2a

This issue was referenced by 00d2237d2a3948457c468bd393276680997f8371

This issue was referenced by cd41570b55

This issue was referenced by cd41570b553f8ac1db671d9d30e06bb8af460e37
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57371
No description provided.