Fix T57371: Generative modifiers in editmode display vertex group weights ...

... incorrectly (or assert)

Thanks @angavrilov and @lichtwerk for the fix.